[package]
name = "kv-store"
version = "0.1.0"
authors = ["Andrei <eu@andreih.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4.0", features = ["full"] }
tokio-serde = { version = "0.8.0", features = ["bincode"] }
futures = "0.3.14"
serde = { version = "1.0.125", features = ["derive"] }
tokio-util = { version = "0.6.5", features = ["codec"] }
